--- a/HomeWork_NAbbineni/Homework9_SQL/Employee_Data_Analysis.ipynb
+++ b/HomeWork_NAbbineni/Homework9_SQL/Employee_Data_Analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,12 +11,12 @@
     "\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "import databaseconfig as dbc\n"
+    "import db_config as dbc\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +95,7 @@
        "Senior Staff          58503.29"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
